# NoisyVerifierFeedback

./: .env.example  .gitignore  LEADERBOARD.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: adaptive_all136_haiku.yaml  adaptive_all136_qwen3.yaml  adaptive_combined51_gemma4.yaml  adaptive_combined51_haiku.yaml  adaptive_combined51_qwen3.yaml  adaptive_combined51_qwen3_gpu0.yaml  adaptive_combined51_sonnet.yaml  adaptive_combined51_sonnet46.yaml  base.yaml  haiku_override.yaml  llm_judge_all136_gemma4.yaml  llm_judge_all136_haiku.yaml  llm_judge_all136_qwen3.yaml  llm_judge_all136_sonnet.yaml  llm_judge_combined51_gemma4.yaml  llm_judge_combined51_haiku.yaml  llm_judge_combined51_qwen3.yaml  llm_judge_combined51_sonnet.yaml  llm_judge_combined51_sonnet46.yaml  llm_judge_combined_haiku.yaml  llm_judge_combined_qwen3.yaml  llm_judge_cot_combined51_haiku.yaml  llm_judge_cot_combined51_sonnet46.yaml  llm_judge_haiku.yaml  llm_judge_loop.yaml  llm_judge_qwen3_8b.yaml  llm_judge_seceval_combined.yaml  llm_judge_sonnet.yaml  model_registry.json  naive_all136_gemma4.yaml  naive_all136_haiku.yaml  naive_all136_qwen3.yaml  naive_all136_sonnet.yaml  naive_combined51_dsv4pro.yaml  naive_combined51_fable5.yaml  naive_combined51_gemma4.yaml  naive_combined51_glm52.yaml  naive_combined51_gptoss.yaml  naive_combined51_haiku.yaml  naive_combined51_haiku_minimal.yaml  (+64 more)
data/: aggregated_v2.csv
docs/: index.html
figures/: noisy_verifier_model.d2  noisy_verifier_model.mmd  noisy_verifier_model.puml
scripts/: aggregate_seeds.py  aggregate_v2.py  analyze_results.py  semgrep.py  (+30 more)
(+2069 files in other folders)
