[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noisy-verifier-feedback"
version = "0.1.0"
description = "Selective Feedback for Noisy Verifiers in LLM Code Agents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "datasets>=2.19",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "rich>=13.7",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "semgrep",
    "bandit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services (API keys, Semgrep CLI)",
]
